# persona-kit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KILOCODE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  persona-driven.md  pyproject.toml  release_notes.md
.github/: CODEOWNERS
.github/scripts/: check-release-exists.sh  create-github-release.sh  generate-release-notes.sh  get-next-version.sh  publish-to-pypi.sh  update-version.sh
.github/workflows/: docs.yml  release.yml
.personakit/: config.yaml
.personakit/memory/: constitution.md  personas.md
.personakit/templates/: agent-file-template.md  checklist-template.md  plan-template.md
agent_templates/: PERSONA.md
agent_templates/auggie/: AUGGIE.md
agent_templates/claude/: CLAUDE.md
agent_templates/codebuddy/: CODEBUDDY.md
agent_templates/codex/: CODEX.md
agent_templates/copilot/: COPILOT.md
agent_templates/cursor-agent/: CURSOR.md
agent_templates/gemini/: GEMINI.md
agent_templates/kilocode/: KILOCODE.md
agent_templates/opencode/: OPENCODE.md
agent_templates/q/: Q.md
agent_templates/qwen/: QWEN.md
agent_templates/roo/: ROO.md
agent_templates/windsurf/: WINDSURF.md
docs/: docfx.json  index.md  installation.md  local-development.md  persona-driven.md  quickstart.md  toc.yml
memory/: constitution-template.md  interaction-history-template.md  team-context-template.md
patterns/communication/: stakeholder-presentation.md  structured-update.md
patterns/conflict-resolution/: interest-based-negotiation.md  structured-dialogue.md
patterns/decision-making/: feature-prioritization.md  risk-assessment.md  (+2 more)
scripts/: create-release-packages.sh
src/: __init__.py
templates/: communication-template.md  conflict-resolution-template.md  constitution-cmd-template.md  decision-making-template.md  feedback-loops-template.md  guidance-template.md  persona-template.md  spec-template.md  tasks-template.md  vscode-settings.json  workflow-template.md
(+97 files in other folders)
