[project]
name = "personakit-cli"
version = "0.0.1"
description = "Persona Kit CLI, part of Persona Kit. A tool to bootstrap your projects with AI personas that mimic a full development company."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
personakit = "personakit_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/personakit_cli"]