[project]
name = "persona-kit"
version = "0.0.5"
description = "A toolkit for persona-driven development workflows and AI agent management."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "platformdirs",
    "pyyaml",
    "jinja2",
]

[project.scripts]
personakit = "src.persona_kit_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.persona-kit]
description = "A toolkit for persona-driven development workflows and AI agent management."
version = "0.1.0"
authors = ["Nom-nom-hub"]
repository = "https://github.com/Nom-nom-hub/persona-kit"
homepage = "https://github.com/Nom-nom-hub/persona-kit"
documentation = "https://github.com/Nom-nom-hub/persona-kit#readme"
keywords = ["persona", "ai", "development", "workflow", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]